compiler/tests/run-pass/empty.arret
(import [stdlib base])

(defn main! ())